major code refactor, restyle and bugfix restyle, updated documentation